--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,22 @@
+@import url("https://fonts.googleapis.com/css?family=Noto+Sans");
+@import url("https://fonts.googleapis.com/css?family=Bungee+Inline");
+
 .App {
   text-align: center;
+  padding: 40px;
+  background-color: #d0f0c0;
+}
+
+body {
+  font-family: "Noto Sans";
+}
+
+header {
+  font-family: "Bungee Inline";
+}
+
+.main-header {
+  font-size: 48px;
 }
 
 .abutment {
@@ -8,4 +25,80 @@
 
 .abutment2 {
   vertical-align: top;
+}
+
+.spacer10 {
+  height: 10px;
+}
+
+.spacer50 {
+  height: 50px;
+}
+
+.spacer100 {
+  height: 100px;
+}
+
+.subheader {
+  font-size: 28px;
+}
+
+/* https://jsfiddle.net/esedic/rLdv29ou/ */
+@-webkit-keyframes bounce {
+  15% {
+    -webkit-transform: translateY(5px);
+    transform: translateY(5px);
+  }
+  30% {
+    -webkit-transform: translateY(-5px);
+    transform: translateY(-5px);
+  }
+  50% {
+    -webkit-transform: translateY(3px);
+    transform: translateY(3px);
+  }
+  65% {
+    -webkit-transform: translateY(-3px);
+    transform: translateY(-3px);
+  }
+  80% {
+    -webkit-transform: translateY(2px);
+    transform: translateY(2px);
+  }
+  100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+}
+@keyframes bounce {
+  /* 15% {
+    -webkit-transform: translateY(5px);
+    transform: translateY(5px);
+  }
+  30% {
+    -webkit-transform: translateY(-5px);
+    transform: translateY(-5px);
+  } */
+  30% {
+    -webkit-transform: translateY(3px);
+    transform: translateY(3px);
+  }
+  50% {
+    -webkit-transform: translateY(-3px);
+    transform: translateY(-3px);
+  }
+  80% {
+    -webkit-transform: translateY(2px);
+    transform: translateY(2px);
+  }
+  100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+}
+.bounce:hover {
+  -webkit-animation: bounce 1s ease;
+  animation: bounce 1s ease;
+  -webkit-animation-iteration-count: 1;
+  animation-iteration-count: 1;
 }
