--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,10 +1,11 @@
-.card {
+.custom-card {
   outline: 2px solid grey;
   border-radius: 70pt;
-  padding: 10px;
+  padding: 15px 25px 10px 25px;
   display: flex;
   align-items: center;
   margin-bottom: 15px;
+  background-color: #e6f5de;
 }
 
 .image {
