--- a/src/components/Tooltip.css
+++ b/src/components/Tooltip.css
@@ -25,7 +25,8 @@
   /* font-family: sans-serif; */
   /* line-height: 1; */
   /* z-index: 100; */
-  width: 250px;
+  width: 280px;
+  text-align: justify;
 }
 
 /* CSS border triangles */
@@ -94,4 +95,5 @@
 .content-header {
   font-size: 15px;
   font-weight: bold;
+  text-align: center;
 }
