--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -5,7 +5,7 @@
   display: flex;
   align-items: center;
   margin-bottom: 15px;
-  background-color: #e6f5de;
+  background-color: #daeaeb;
   vertical-align: middle;
 }
 
